after to put a logic for register and login

--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,7 @@ SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-anon-or-service-key
 
 # JWT
-JWT_SECRET=ton_secret_ultra_sécurisé_ici_changemoi
+JWT_SECRET=botinda
 
 # Twilio
 TWILIO_ACCOUNT_SID=ACxxxxxx
