--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1"
   }
 }
